--- a/PaintTool/PaintTool.vcxproj.filters
+++ b/PaintTool/PaintTool.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClCompile Include="shape.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rectangle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PaintTool.rc">
