--- a/PaintTool/PaintTool.vcxproj
+++ b/PaintTool/PaintTool.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="stamp.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ellipse.cpp" />
     <ClCompile Include="line.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="rectangle.cpp" />
