--- a/PaintTool/PaintTool.vcxproj.filters
+++ b/PaintTool/PaintTool.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClCompile Include="rectangle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ellipse.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PaintTool.rc">
